# csct-main-app

./: .dockerignore  .gitignore  Dockerfile  README.md  hot-reload-container.bat  keywords..txt  main.py  proxy-list.txt  pyproject.toml  relaunch-container.bat  relaunch-container.sh  scraper_script.py  script_executor.py  streamlit_app.py
app/: main.py  scripts.py
app/api/: api_models.py  index.py
crawlee-scraper/: .gitignore  package-lock.json  package.json  proxy-list.js  proxy-list.json  relaunch-crawlee-scraper-container.bat
data/: csct-db.product.json  passages.txt
docs/: ai-based-webscraping.md  product-types.json  sample-scraping-data.json
puppeteer-scraper/: package.json
scraper/: Dockerfile  hot-reload-container.bat  main.py  pyproject.toml  relaunch-container.bat  run-spider.bat
scraper/models/: Nutrient.py  Nutrients.py  Price.py  Product.py
scraper/scraper/: main.py
scraper/scraper/components/api/: index.py
scraper/scraper/components/supermarketscraper/supermarketscraper/: middlewares.py  settings.py
scraper/scraper/components/supermarketscraper/supermarketscraper/spiders/: scraper.py
scraper/scraper/data/: drop.py  prepare.py
scraper/scraper/db/: connect.py
scraper/scraper/helpers/: crawler.py  initialize.py
scraper/scraper/models/product/: Nutrients.py  Product.py
scraper/scraper/models/scraping/: ListPageMeta.py  SupermarketMeta.py
scraper/scraper/src/: main.py
scraper/scraper/src/components/supermarketscraper/: scrapy.cfg
scraper/scraper/src/components/supermarketscraper/supermarketscraper/spiders/: scraper.py
scraper/scraper/src/data/: drop.py  prepare.py
scraper/scraper/src/functions/: initialize.py
scraper/scraper/src/models/product/: Nutrient.py  Nutrients.py  Product.py
scraper/scraper/src/models/scraping/: ListPageMeta.py  SupermarketMeta.py
scraper/tests/unittests/: ProductSchemaTest.py  ScrapingMetaDataTest.py
supermarketscraper/: SuperMarketScraper.py  scraper.py
utils/: files.py  proxy.py  supermarkets.py  utils.py
(+66 files in other folders)
