[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Nisuga Jayawardana <nisuga.rockwell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.5.0"
python-dotenv = "^1.0.0"
mongoengine = "^0.27.0"
scrapy = "^2.11.0"
scrapy-playwright = "^0.0.33"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
scrapy-fake-useragent = "^1.4.4"
blinker = "^1.7.0"
scrapy-proxies = "^0.4"
transformers = "^4.35.2"
datasets = "^2.15.0"
evaluate = "^0.4.1"
huggingface = "^0.0.1"
huggingface-hub = "^0.19.4"
langchain = "^0.0.348"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
numpy = "^1.26.2"
price-parser = "^0.3.4"
openai = "^1.6.1"
langchainhub = "^0.1.14"
tiktoken = "^0.5.2"
pgvector = "^0.2.4"
psycopg2-binary = "^2.9.9"
codetiming = "^1.4.0"
chromadb = "^0.4.22"
streamlit = "^1.29.0"
pandas = "^2.1.4"
streamlit-aggrid = "^0.3.4.post3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
