[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Nisuga Jayawardana <nisuga.rockwell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.5.0"
python-dotenv = "^1.0.0"
mongoengine = "^0.27.0"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
